--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/cqrs": "^9.0.4",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.15.0",
+    "bcrypt": "^5.1.0",
     "builder-pattern": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
